err/aspen-jinja2.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/algorithm-1.2.0.dist-info'...
Listing './lib/python3.5/site-packages/aspen'...
Listing './lib/python3.5/site-packages/aspen/algorithms'...
Listing './lib/python3.5/site-packages/aspen/auth'...
Compiling './lib/python3.5/site-packages/aspen/auth/httpdigest.py'...
***   File "./lib/python3.5/site-packages/aspen/auth/httpdigest.py", line 136
    except KeyError, k:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aspen/backcompat.py'...
***   File "./lib/python3.5/site-packages/aspen/backcompat.py", line 139
    exec template in namespace
                ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/aspen/configuration'...
Compiling './lib/python3.5/site-packages/aspen/configuration/__init__.py'...
***   File "./lib/python3.5/site-packages/aspen/configuration/__init__.py", line 77
    except UnicodeDecodeError, error:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aspen/http'...
Listing './lib/python3.5/site-packages/aspen/simplates'...
Compiling './lib/python3.5/site-packages/aspen/simplates/__init__.py'...
***   File "./lib/python3.5/site-packages/aspen/simplates/__init__.py", line 238
    exec one in context    # mutate context
           ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/aspen/simplates/renderers'...
Compiling './lib/python3.5/site-packages/aspen/simplates/renderers/__init__.py'...
***   File "./lib/python3.5/site-packages/aspen/simplates/renderers/__init__.py", line 113
    exec python_syntax % name in capture
                     ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/aspen/testing'...
Listing './lib/python3.5/site-packages/aspen/www'...
Listing './lib/python3.5/site-packages/aspen-0.42.egg-info'...
Listing './lib/python3.5/site-packages/aspen_jinja2-0.5.dist-info'...
Listing './lib/python3.5/site-packages/dependency_injection-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/filesystem_tree-1.1.2.egg-info'...
Listing './lib/python3.5/site-packages/first-2.0.1.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_mimeparse-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
